<resources>

    <string name="app_name">Assignment2</string>
    <string name="mp3_app_title">Mp3 Player</string>
    <string name="menu_settings">Settings</string>
    <string name="country_app_name">MyCountries</string>
    <string name="country">Country</string>
    <string name="year">Year Of Visit</string>
    <string name="updateCountry">Update Country</string>
    <string name="addNewCountry">Add Country</string>
    <string name="prefs">Prefs</string>
    <string name="title_activity_my_countries">MyCountries</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_country">AddCountry</string>
    <string name="sortByName">Sort By Name</string>
    <string name="sortByYear">Sort By Year</string>
    
    <string name="restrict_year_summary">Restrict year of visit (1900 >=)</string>
    <string name="restrict_year">Restrict Year</string>
    <string name="bg_color">Background Color</string>
    <string name="rotation_angle">Rotation Angle</string>
    <string name="rotation_angle_summary">Rotation angle of the list</string>
     <string name="alarm_app_name">AlarmClock</string>
    <string name="add_alarm">Set Alarm</string>
    <string name="reset_alarm">Reset</string>
    <string name="done_alarm">Done Alarm</string>
    <string name="title_activity_alarm_clock">AlarmClockActivity</string>
    <string name="default_alarm">--:--</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="bell">Alarm Set</string>
    <string name="title_activity_alarm_notification">AlarmNotificationActivity</string>
</resources>