<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/bellImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bell"
        android:src="@drawable/bell"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/currentTimeTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

      <TextView
            android:id="@+id/alarmTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/default_alarm"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <Button
            android:id="@+id/resetAlarmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_alarm"
            android:textSize="20sp"
            android:visibility="invisible" />

    </FrameLayout>
     
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/addAlarmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_alarm"
            android:textSize="20sp" />

        <Button
            android:id="@+id/doneAlarmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/done_alarm"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/alarmTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/default_alarm"
            android:textSize="20sp"
            android:visibility="invisible" />
    </FrameLayout>

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>